# fuzzysearch

./: Cargo.toml  LICENSE  README.md
data/: tmdb-5000.txt
public/: index.html  main.js  style.css
src/: main.rs  search.rs
