[package]
name = "fuzzysearch"
version = "0.1.0"
authors = ["Saurav Dhungana <saurav.dh@gmail.com>"]

[dependencies]
# fuzzymatch = { path = "../fuzzymatch/" }
fuzzymatch = { git = "https://github.com/batuwa/fuzzymatch.git" }
rocket = "0.3.6"
rocket_codegen = "0.3.6"
serde = "1.0.19"
serde_derive = "1.0.19"
serde_json = "1.0.6"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]